<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:gravity="center_vertical"
        android:text="ATUALIZAR PERFIL"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/usuario_username" />

    <EditText
        android:id="@+id/atualizarUsernameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/usuario_city" />

    <EditText
        android:id="@+id/atualizarCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/usuario_password" />

    <EditText
        android:id="@+id/atualizarPasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confimarAtualizarPefilBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar Atualização" />

    <Button
        android:id="@+id/confimarDeletarPefilBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Deletar Perfil" />

</LinearLayout>